Added methods to note service and notecontroller, getById

--- a/ElevenNote.Data/ElevenNote.Data.csproj
+++ b/ElevenNote.Data/ElevenNote.Data.csproj
@@ -85,12 +85,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202101302308597_InitialCreate.cs" />
+    <Compile Include="Migrations\202101302308597_InitialCreate.Designer.cs">
+      <DependentUpon>202101302308597_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202101311947169_ElevenNoteData.cs" />
+    <Compile Include="Migrations\202101311947169_ElevenNoteData.Designer.cs">
+      <DependentUpon>202101311947169_ElevenNoteData.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202101302308597_InitialCreate.resx">
+      <DependentUpon>202101302308597_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101311947169_ElevenNoteData.resx">
+      <DependentUpon>202101311947169_ElevenNoteData.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
