--- a/ElevenNote.Data/ElevenNote.Data.csproj
+++ b/ElevenNote.Data/ElevenNote.Data.csproj
@@ -93,6 +93,10 @@
     <Compile Include="Migrations\202101311947169_ElevenNoteData.Designer.cs">
       <DependentUpon>202101311947169_ElevenNoteData.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202102020337578_NoteDetail.cs" />
+    <Compile Include="Migrations\202102020337578_NoteDetail.Designer.cs">
+      <DependentUpon>202102020337578_NoteDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Note.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -107,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101311947169_ElevenNoteData.resx">
       <DependentUpon>202101311947169_ElevenNoteData.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202102020337578_NoteDetail.resx">
+      <DependentUpon>202102020337578_NoteDetail.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
